--- a/data_processing/results.ipynb
+++ b/data_processing/results.ipynb
@@ -194,7 +194,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Task/non-task Stats"
    ]
@@ -437,7 +441,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Chi-squared"
    ]
